--- a/WhatsOnCApp/templates/contactUs.html
+++ b/WhatsOnCApp/templates/contactUs.html
@@ -9,15 +9,15 @@
 
 {% block content %}
 
-<h3>contact us form</h3>
-<div style="width: 80vw; margin-left: 10%;">
+<h3 class="page-title"><i class="fa-solid fa-location-dot" style="color: #fe7f2d;"></i>contact us</h3>
+<div style="width: 80%; margin-left: 10%;">
 
     <form method="POST" id="" enctype="multipart/form-data">
         {% csrf_token %}
 
         {{ formCU | crispy }}
 
-        <button type="submit">Save</button>
+        <button type="submit">Submit</button>
 
     </form>
 </div>
