--- a/templates/includes/header_logo.html
+++ b/templates/includes/header_logo.html
@@ -1,5 +1,5 @@
 <div id="headerLogo">
-    <div><a href="{% url 'WhatsOnCApp:home' %}"> <img id="logo"
+    <div><a href="{% url 'whatsoncapp:home' %}"> <img id="logo"
                 src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1749127668/WhatsOnC-NCI/logoNoBG_y38bbq.png"
                 width="85px" height="85px" alt="logo"></a></div>
     <div>
