--- a/whatsoncapp/templates/messageContactUs.html
+++ b/whatsoncapp/templates/messageContactUs.html
@@ -34,7 +34,7 @@
 
     </table>
 </div>
-<a id="theBtn" href='{% url "WhatsOnCApp:controlPanel" %}'><i class="fa-solid fa-backward-step"
+<a id="theBtn" href='{% url "whatsoncapp:controlPanel" %}'><i class="fa-solid fa-backward-step"
         style="color: #233d4d;"></i> BACK</a>
 
 {% endblock %}
