--- a/communityapp/templates/userProfile.html
+++ b/communityapp/templates/userProfile.html
@@ -15,7 +15,7 @@
 
         {% for bookmark in bookmarks %}
         <div class="cardBookmark">
-            <a href="{% url 'WhatsOnCApp:event' bookmark.event.id %}"> 🔍 {{ bookmark.event.title }} </a>
+            <a href="{% url 'whatsoncapp:event' bookmark.event.id %}"> 🔍 {{ bookmark.event.title }} </a>
             <table>
                 <tr>
                     <td>
