--- a/Templates/index.html
+++ b/Templates/index.html
@@ -26,8 +26,8 @@
         <img src="https://res.cloudinary.com/dwjq6izv5/image/upload/v1752150427/top-view-children-studying-floor-library_lvck0m.jpg"
             alt="Pic 3" loading="lazy" />
     </div>
-    <small class="image-stack justify-content-end mb-5">Images from <a
-            href="www.freepik.com">www.freepik.com</a></small>
+    <small class="image-stack justify-content-end mb-5">Images from <a href="https://www.freepik.com" target="_blank"
+            rel="noopener noreferrer">www.freepik.com</a></small>
 
     <p id="indexP" class="mt-3">Our platform connects families with verified providers offering activities for children
         and
