--- a/WhatsOnCApp/templates/detailView.html
+++ b/WhatsOnCApp/templates/detailView.html
@@ -7,7 +7,8 @@
 {% block content %}
 
 <h3 class="mt-4 ms-3 page-title"><i class="fa-solid fa-location-dot" style="color: #fe7f2d;"></i>Event Details</h3>
-<div class="d-flex" id="eventDiv">
+
+<div class="d-flex" id="imgDiv">
     {% if event_images %}
     {% for image in event_images %}
     <div class="eventSDiv ">
@@ -15,73 +16,76 @@
     </div>
     {% endfor%}
     {% endif %}
-    {% if request.user == event.provider.user %}
-    <form method="POST" action="{% url 'WhatsOnCApp:editEvent' event.id %}"> {% csrf_token %}
-        <button type="submit" name="editPost" value="event.id">
-            <i style="width: 2rem;"></i><small>Edit it</small>
-        </button>
-    </form>
-    {% endif %}
+    <small style="margin-left: 1rem;">Images from <a href="https://www.freepik.com" target="_blank"
+            rel="noopener noreferrer">www.freepik.com</a></small>
+</div>
+{% if request.user == event.provider.user %}
+<form method="POST" action="{% url 'WhatsOnCApp:editEvent' event.id %}"> {% csrf_token %}
+    <button type="submit" name="editPost" value="event.id">
+        <i style="width: 2rem;"></i><small>Edit it</small>
+    </button>
+</form>
+{% endif %}
 
-    <div class="eventSDiv" id="dataDiv">
-        <div id="title">
-            <h1>{{ event.title }}</h1>
+<div class="eventSDiv" id="dataDiv">
+    <div id="title">
+        <h1>{{ event.title }}</h1>
 
-            {% if user.is_authenticated and not request.user.is_staff %}
-            <form method="POST" action="{% url 'CommunityApp:bookmark' event.id %}">
-                {% csrf_token %}
-                {% if bookmarked %}
-                <button class="btnBM" type="submit" name="bookmark" value="{{event.id}}">
-                    <i class="fa-solid fa-bookmark fa-2x"></i><small></small>
-                </button>
-                {% else %}
-                <button class="btnBM" type="submit" name="bookmark" value="event.id">
-                    <i class="fa-regular fa-bookmark fa-2x"></i><small></small>
-                </button>
-                {% endif %}
-            </form>
+        {% if user.is_authenticated and not request.user.is_staff %}
+        <form method="POST" action="{% url 'CommunityApp:bookmark' event.id %}">
+            {% csrf_token %}
+            {% if bookmarked %}
+            <button class="btnBM" type="submit" name="bookmark" value="{{event.id}}">
+                <i class="fa-solid fa-bookmark fa-2x"></i><small></small>
+            </button>
+            {% else %}
+            <button class="btnBM" type="submit" name="bookmark" value="event.id">
+                <i class="fa-regular fa-bookmark fa-2x"></i><small></small>
+            </button>
             {% endif %}
-        </div>
-        <div>
-            <table>
-                <tr>
-                    <td>
-                        Location </td>
-                    <td> : </td>
-                    <td class="ps-3">{{ event.location }}</td>
-                </tr>
-                <tr>
-                    <td>Date</td>
-                    <td> : </td>
-                    <td class="ps-3">{{ event.startDate }}</td>
-                </tr>
-                <tr>
-                    <td>Time </td>
-                    <td> : </td>
-                    <td class="ps-3">{{ event.startTime }}</td>
-                </tr>
-                <tr>
-                    <td>endDate</td>
-                    <td> : </td>
-                    <td class="ps-3">{{ event.endDate }}</td>
-                </tr>
-                <tr>
-                    <td>vcode</td>
-                    <td> : </td>
-                    <td class="ps-3">{{ event.vcode }}</td>
-                </tr>
-                <tr>
-                    <td>provider</td>
-                    <td> : </td>
-                    <td class="ps-3">
-                        <a href="{% url 'CommunityApp:providerProfile' event.provider.id %}">🔍
-                            {{event.provider }}
-                        </a>
-                    </td>
-                </tr>
-            </table>
-        </div>
+        </form>
+        {% endif %}
     </div>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    Location </td>
+                <td> : </td>
+                <td class="ps-3">{{ event.location }}</td>
+            </tr>
+            <tr>
+                <td>Date</td>
+                <td> : </td>
+                <td class="ps-3">{{ event.startDate }}</td>
+            </tr>
+            <tr>
+                <td>Time </td>
+                <td> : </td>
+                <td class="ps-3">{{ event.startTime }}</td>
+            </tr>
+            <tr>
+                <td>endDate</td>
+                <td> : </td>
+                <td class="ps-3">{{ event.endDate }}</td>
+            </tr>
+            <tr>
+                <td>vcode</td>
+                <td> : </td>
+                <td class="ps-3">{{ event.vcode }}</td>
+            </tr>
+            <tr>
+                <td>provider</td>
+                <td> : </td>
+                <td class="ps-3">
+                    <a href="{% url 'CommunityApp:providerProfile' event.provider.id %}">🔍
+                        {{event.provider }}
+                    </a>
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
 </div>
 <div id="eventExtraDiv">
     <p>description: {{ event.description }}</p>
